--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "api-rest-node-typescript",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Porcino",
-  "license": "MIT",
-  "private": false,
-  "scripts": {
-    "start": "ts-node-dev ./src/index.ts",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@types/jest": "^29.2.4",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "http-status-codes": "^2.2.0",
-    "jest": "^29.3.1",
-    "ts-jest": "^29.0.3",
-    "yarn": "^1.22.19",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@types/babel__core": "^7.1.20",
-    "@types/express": "^4.17.14",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "eslint": "^8.25.0",
-    "supertest": "^6.3.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "name": "api-rest-node-typescript",
+    "version": "1.0.0",
+    "main": "index.js",
+    "author": "Lucas Souza",
+    "license": "MIT",
+    "private": false,
+    "scripts": {
+      "start": "ts-node-dev ./src/index.ts",
+      "production": "node ./build/index.js",
+      "postinstall": "tsc",
+      "test": "jest"
+    },
+    "dependencies": {
+      "@types/jest": "^28.1.6",
+      "dotenv": "^16.0.1",
+      "express": "^4.18.1",
+      "http-status-codes": "^2.2.0",
+      "jest": "^28.1.3",
+      "ts-jest": "^28.0.7",
+      "yup": "^0.32.11"
+    },
+    "devDependencies": {
+      "@types/express": "^4.17.13",
+      "@types/supertest": "^2.0.12",
+      "@typescript-eslint/eslint-plugin": "^5.30.6",
+      "@typescript-eslint/parser": "^5.30.6",
+      "eslint": "^8.19.0",
+      "supertest": "^6.2.4",
+      "ts-node-dev": "^2.0.0",
+      "typescript": "^4.7.4"
+    },
+    "engines": {
+      "node": "16.x"
+    }
   }
-}
