--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
         "start": "ts-node-dev ./src/index.ts",
         "production": "node ./build/index.js",
         "postinstall": "tsc",
+        "knex:migrate": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:latest",
+        "knex:rollback": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback",
+        "knex:rollback-all": "knex --knexfile ./src/server/database/knex/Environment.ts migrate:rollback --all",
+        "knex:seed": "knex --knexfile ./src/server/database/knex/Environment.ts seed:run",
         "test": "jest"
     },
     "dependencies": {
@@ -19,20 +23,21 @@
         "jest": "^28.1.3",
         "knex": "^2.3.0",
         "ts-jest": "^28.0.7",
+        "yarn": "^1.22.19",
         "yup": "^0.32.11"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.30.6",
-        "@typescript-eslint/parser": "^5.30.6",
-        "eslint": "^8.19.0",
-        "sqlite": "^4.1.2",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "eslint": "^8.30.0",
+        "sqlite3": "^5.1.4",
         "supertest": "^6.2.4",
         "ts-node-dev": "^2.0.0",
         "typescript": "^4.7.4"
     },
     "engines": {
-        "node": "16.x"
+        "node": "18.x"
     }
 }
