--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
         "test": "jest"
     },
     "dependencies": {
+        "@types/jsonwebtoken": "^9.0.1",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "http-status-codes": "^2.2.0",
+        "jsonwebtoken": "^9.0.0",
         "knex": "^2.2.0",
         "sqlite3": "^5.0.10",
         "yup": "^0.32.11"
