--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ NODE_ENV=
 IS_LOCALHOST=false
 
 JWT_SECRET=[alguma chave secreta e unica]
+
+DATABASE_HOST=,
+DATABASE_PORT=,
+DATABASE_USER=,
+DATABASE_NAME=,
+DATABASE_PASSWORD=,
