--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
         "http-status-codes": "^2.2.0",
         "jsonwebtoken": "^9.0.0",
         "knex": "^2.2.0",
+        "pg": "^8.9.0",
         "sqlite3": "^5.0.10",
         "yup": "^0.32.11"
     },
     "devDependencies": {
+        "sqlite3": "^5.0.10",
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.6",
+        "@types/pg": "^8.6.6",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^5.30.6",
         "@typescript-eslint/parser": "^5.30.6",
