--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@types/jsonwebtoken": "^9.0.1",
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "http-status-codes": "^2.2.0",
@@ -28,8 +29,8 @@
         "yup": "^0.32.11"
     },
     "devDependencies": {
-        "sqlite3": "^5.0.10",
         "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.6",
         "@types/pg": "^8.6.6",
@@ -38,6 +39,7 @@
         "@typescript-eslint/parser": "^5.30.6",
         "eslint": "^8.19.0",
         "jest": "^28.1.3",
+        "sqlite3": "^5.0.10",
         "supertest": "^6.2.4",
         "ts-jest": "^28.0.7",
         "ts-node-dev": "^2.0.0",
